Simplify collaborative property ordering